# FaaD

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: __init__.py  deps.py  utils.py
app/api/endpoints/: erd.py  groups.py  users.py
app/core/: config.py  security.py
app/crud/: base.py  user.py
app/db/: __init__.py  base.py  base_class.py  session.py
app/models/: __init__.py  base.py  users.py
app/schemas/: users.py
